Finalized colorway selections and bio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <!-- <link rel="stylesheet" type="text/css" href="css/style.production.css"> -->
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head> 
     <body class="index-html">
         <header class="page-header">
