Changed the title of each page

--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Welcome to Sophia's Portfolio Site! Thanks for exploring my work. If you'd like to collaborate, I'd love to hear from you!">
-        <title>Soap's Folio</title>
+        <title>Sophia's Work and Projects</title>
         <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
         <script src="js/index.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
