Removed 8% margin from media q, edited index page intro

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <main class="main-profile">
             <div class="profile">
                 <img src="img/selfie_square.jpeg" class="profile__portrait" alt="Photo of Sophia Banda">
-                <p>My name is Sophia Banda.<br> I am a <span>Software Engineer</span><br> living in North Carolina.</p>
-                <p>Check out my<a href="work.html" target="blank_"><i> code.</i> </a></p>
+                <p>My name is Sophia. I am a Software Engineer living in North Carolina. Check out my work<a href="work.html"> here.</a>  
             </div>
         </main>
         <footer class="page-footer">
@@ -47,4 +46,4 @@
             </div>
         </footer>
     </body>
-</html>
+</html> 
