typo fix on index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main class="main-profile">
             <div class="profile">
                 <img src="img/selfie_square.jpeg" class="profile__portrait" alt="Photo of Sophia Banda">
-                <p>My name is Sophia. I am a Software Engineer living in North Carolina. Check out my work<a href="work.html"> here.</a>  
+                <p>My name is Sophia. I am a Software Engineer living in North Carolina. Check out my work<a href="work.html"> here.</a></p>
             </div>
         </main>
         <footer class="page-footer">
