--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <h1>Sophia M. Banda</h1>
                 <p>Software Engineer</p>
-            </div>   
+            </div>
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation"><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
@@ -33,7 +33,7 @@
         </header>
         <main class="main-profile">
             <div class="profile">
-                <img src="img/selfie_square.jpeg" class="profile__portrait" alt="Photo of Sophia Banda">
+                <img src="img/sophia-face.svg" class="profile__portrait" alt="Pixelised Photo of Sophia Banda">
                 <p>My name is Sophia. I am a Software Engineer living in North Carolina. Check out my work<a href="work.html"> here.</a></p>
             </div>
         </main>
