link fix for resume

--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
                 <div class="project-list">
                     <div class="project-list__item">
                         <h2>RESUME</h2>
-                        <a href="/files/Banda_Resume.pdf" target="_blank"><img src="img/Banda_Resume.png"></a>
+                        <a href="files/Banda_Resume.pdf" target="_blank"><img src="img/Banda_Resume.png"></a>
                     </div>
                     <div class="project-list__item">
                         <h2>APP ONE</h2>
