--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation"><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
-                    <li role="presentation"><a href="about-bio-sophia_banda.html" role="menuitem" class="navigation-list__item">About</a></li>
+                    <li role="presentation"><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
                     <li role="presentation"><a href="work.html" role="menuitem" class="navigation-list__item">Work</a></li>
-                    <li role="presentation"><a href="contact-sophia_banda.html" role="menuitem" class="navigation-list__item">Contact</a></li>
+                    <li role="presentation"><a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a></li>
                 </ul>
             </nav>
         </header>
