made logo clickable link, removed visited colors

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,12 @@
     </head>
     <body class="contact-html">
         <header class="page-header">
-            <div>
-                <h1>Sophia M. Banda</h1>
-                <p>Software Engineer</p>
-            </div>
+            <a href="index.html" class="logo-block">
+                <div>
+                    <h1>Sophia M. Banda</h1>
+                    <p>Software Engineer</p>
+                </div> 
+            </a>
              <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation"><a href="index.html" role="menuitem">Home</a></li>
