--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head> 
     <body class="index-html">
         <header class="page-header">
-            <div>
+            <div class="logo-block">
                 <h1>Sophia M. Banda</h1>
                 <p>Software Engineer</p>
             </div>
