--- a/about.html
+++ b/about.html
@@ -35,7 +35,16 @@
         <main>
             <div class="about-me">
                 <h1>About</h1>
-                <p></p>
+                <article class="bio-info">
+                  <p>I've spent most of my life in the cities displayed above and have had the luck and pleasure of living 
+                    in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys.</p>
+                  <p>I have been a certified fitness instructor since 2009, and the kettlebell has been my specialty since 2016.
+                    While I am no longer working in the fitness industry, fitness is still a very large part of my life, and I have a 
+                    strong love for the kettlebell.</p>
+                  <p>Below is my first ever CSS animation. I am quite proud, please take a look. 🙂</p> 
+                  <p>If you'd like to learn more, feel free to drop me a note or ask me a question 
+                    <a href="contact-sophia_banda.html#contact" id="here">here.</a></p> 
+                </article>
                 <svg class="where-lived"
                    alt="Animated images representing of San Fransico, CA, NYC, NY and Miami, FL"
                    width="900px"
@@ -4851,19 +4860,6 @@
                     </g>
                 </svg>
             </div>
-            <!-- <div class="bio-info"> -->
-                <article class="bio-info">
-                  <p>I've spent most of my life in the cities displayed above and have had the luck and pleasure of living 
-                    in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys.</p>
-                  <p>I have been a certified fitness instructor since 2009, and the kettlebell has been my specialty since 2016.
-                    While I am no longer working in the fitness industry, fitness is still a very large part of my life, and I have a 
-                    strong love for the kettlebell.</p>
-                  <p>I've recently discovered how cool CSS can be and I'm very proud of the animations created above, so please check 
-                    them out.</p> 
-                  <p>If you'd like to learn more, feel free to drop me a note or ask me a question 
-                    <a href="contact-sophia_banda.html#contact" id="here">here.</a></p> 
-                </article>
-            <!-- </div> -->
         </main>
         <footer class="page-footer">
             <p>Find me on:</p>
