--- a/work.html
+++ b/work.html
@@ -20,9 +20,9 @@
             <div>
                 <h1>Sophia M. Banda</h1>
                 <p>Software Engineer</p>
-            </div> 
+            </div>
         </a>
-        <nav class="main-navigation page-header__item">  
+        <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation"><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item">Home</a></li>
                 <li role="presentation"><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
@@ -37,8 +37,7 @@
                 <h1>Work</h1>
                 <div class="project-list">
                     <div class="project-list__item">
-                        <h2>RESUME</h2>
-                        <a href="files/Banda_Resume.pdf" target="_blank"><img src="img/Banda_Resume.png"></a>
+                        <a href="files/resume.pdf" target="_blank"><h2>RESUME</h2></a>
                     </div>
                     <div class="project-list__item">
                         <h2>APP ONE</h2>
