--- a/work.html
+++ b/work.html
@@ -1,90 +1,159 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Welcome to Sophia's Portfolio Site! Thanks for exploring my work. If you'd like to collaborate, I'd love to hear from you!">
-        <title>Sophia's Projects and Work</title>
-        <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
-        <script src="js/index.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-         <!--The next 3 links are all for the Google Font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
-        <!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
-    </head>
-    <header class="page-header">
-        <a href="index.html" class="logo-block">
-            <div>
-                <h1>Sophia M. Banda</h1>
-                <p>Software Engineer</p>
-            </div>
-        </a>
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation"><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item">Home</a></li>
-                <li role="presentation"><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-                <li role="presentation"><a href="work.html" role="menuitem" class="navigation-list__item--active">Work</a></li>
-                <li role="presentation"><a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <body class="work-html">
-        <main>
-            <div class="work-page">
-                <h1>Work</h1>
-                <div class="project-list">
-                    <div class="project-list__item">
-                        <a href="files/resume.pdf" target="_blank"><h2>RESUME</h2></a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>APP ONE</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#">See project on GitHub</a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>APP TWO</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#">See project on GitHub</a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>APP THREE</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#">See project on GitHub</a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>APP FOUR</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#">See project on GitHub</a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>APP FIVE</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#">See project on GitHub</a>
-                    </div>
-                </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Welcome to Sophia's Portfolio Site! Thanks for exploring my work. If you'd like to collaborate, I'd love to hear from you!"
+    />
+    <title>Sophia's Projects and Work</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png" />
+    <script src="js/index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <!--The next 3 links are all for the Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+  </head>
+  <header class="page-header">
+    <a href="index.html" class="logo-block">
+      <div>
+        <h1>Sophia M. Banda</h1>
+        <p>Software Engineer</p>
+      </div>
+    </a>
+    <nav class="main-navigation page-header__item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation"
+          ><a
+            href="index.html"
+            role="menuitem"
+            class="navigation-list__item navigation-list__item"
+            >Home</a
+          ></li
+        >
+        <li role="presentation"
+          ><a href="about.html" role="menuitem" class="navigation-list__item"
+            >About</a
+          ></li
+        >
+        <li role="presentation"
+          ><a
+            href="work.html"
+            role="menuitem"
+            class="navigation-list__item--active"
+            >Work</a
+          ></li
+        >
+        <li role="presentation"
+          ><a href="contact.html" role="menuitem" class="navigation-list__item"
+            >Contact</a
+          ></li
+        >
+      </ul>
+    </nav>
+  </header>
+  <body class="work-html">
+    <main>
+      <div class="work-page">
+        <h1>Work</h1>
+        <div class="project-list">
+          <div class="project-list__item">
+            <a href="files/resume.pdf" target="_blank"><h2>RESUME</h2></a>
+          </div>
+          <div class="project-list__item">
+            <h2>Let's Meet</h2>
+            <img src="img/letsmeetimg.png" class="letsmeetpng" />
+            <p
+              >Welcome to Let's Meet! An app where you find events by location,
+              with offline functionality. Check me out now at
+              <a target="_blank" href="https://sophiabanda.github.io/letsmeet/"
+                >https://sophiabanda.github.io/letsmeet/</a
+              ></p
+            >
 
-            </div>
-        </main>
-    </body>
-    <footer class="contact-footer">
-        <p>Find me on:</p>
-        <div class="social-media">
-            <a href="https://github.com/sophiabanda" target="_blank"><img src="img/github_icon.svg" alt="Github logo"></a>
-            <a href="https://www.linkedin.com/in/sophia-m-banda/" target="_blank"><img src="img/link_icon.svg" alt="LinkedIn logo"></a>
-            <a href="https://www.instagram.com/sophia.m.banda/" target="_blank"><img src="img/ig_icon.svg" alt="Instagram logo"></a>
+            <a target="_blank" href="https://github.com/sophiabanda/letsmeet"
+              >See project on GitHub</a
+            >
+          </div>
+          <div class="project-list__item">
+            <h2>APP TWO</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#">See project on GitHub</a>
+          </div>
+          <div class="project-list__item">
+            <h2>APP THREE</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#">See project on GitHub</a>
+          </div>
+          <div class="project-list__item">
+            <h2>APP FOUR</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#">See project on GitHub</a>
+          </div>
+          <div class="project-list__item">
+            <h2>APP FIVE</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#">See project on GitHub</a>
+          </div>
         </div>
-    </footer>
+      </div>
+    </main>
+  </body>
+  <footer class="contact-footer">
+    <p>Find me on:</p>
+    <div class="social-media">
+      <a href="https://github.com/sophiabanda" target="_blank"
+        ><img src="img/github_icon.svg" alt="Github logo"
+      /></a>
+      <a href="https://www.linkedin.com/in/sophia-m-banda/" target="_blank"
+        ><img src="img/link_icon.svg" alt="LinkedIn logo"
+      /></a>
+      <a href="https://www.instagram.com/sophia.m.banda/" target="_blank"
+        ><img src="img/ig_icon.svg" alt="Instagram logo"
+      /></a>
+    </div>
+  </footer>
 </html>
