--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
           </div>
           <div class="project-list__item">
             <h2>Let's Meet</h2>
-            <img src="img/letsmeetimg.png" class="letsmeetpng" />
+            <img src="img/letsmeetpng.png" class="letsmeetpng" />
             <p
               >Welcome to Let's Meet! An app where you find events by location,
               with offline functionality. Check me out now at
